--- a/templates/includes/_catalog_quickview_layer.html
+++ b/templates/includes/_catalog_quickview_layer.html
@@ -3,17 +3,17 @@
         <div class="card-photo-block">
             <div class="bxslider-photo-border">
                 <div class="bxslider-photo no-zoom">
-                    <a class="photo-slide"><img src="images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p13.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p13.jpg" alt=""/></a>
                 </div>
                 <div class="bx-arrow-left"></div>
                 <div class="bx-arrow-right"></div>
             </div>
             <a href="#layer-addfav" class="fancybox card-service-item">
-                <img src="images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
+                <img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
             </a>
         </div>
         <div class="card-desc">
@@ -49,17 +49,17 @@
         <div class="card-photo-block">
             <div class="bxslider-photo-border">
                 <div class="bxslider-photo no-zoom">
-                    <a class="photo-slide"><img src="images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p11.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p12.jpg" alt=""/></a>
-                    <a class="photo-slide"><img src="images/upload/p13.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
+                    <a class="photo-slide"><img src="static/images/upload/p13.jpg" alt=""/></a>
                 </div>
                 <div class="bx-arrow-left"></div>
                 <div class="bx-arrow-right"></div>
             </div>
             <a href="#layer-addfav" class="fancybox card-service-item">
-                <img src="images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
+                <img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
             </a>
         </div>
         <div class="card-desc">
