--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -157,7 +157,7 @@
 			</div>
 		</form>
 	</div>
-	<div class="layer-btm w240">			
+	<div class="layer-btm1 w240">			
 		<div class="mb25">Если вы зарегистрированы на сайте,
 		вы можете отслеживать статус
 		в Личном кабинете в разделе                 
