--- a/static/scss/_card.scss
+++ b/static/scss/_card.scss
@@ -10,10 +10,11 @@
 	margin-bottom: 5px;
 	color: #000;
 }
-.layer-btm {
+.layer-btm1 {
 	background: #f5f5f5;
 	padding: 13px 40px 35px;
 	line-height: 1.5em;
+	border-radius: 0 0 4px 4px;
 }
 .mb25 {
 	margin-bottom: 25px;
@@ -574,9 +575,19 @@ ul.tabs li {
 	width: 170px;
 	margin-bottom: 10px;
 }
+.btn-block {
+  width: auto;
+  padding-left: 0;
+  padding-right: 0;
+  display: block;
+  text-align: center;
+}
 .related-suggest-cont .btn-block,
-.linkcard-cont .btn-block {
+.linkcard-cont .btn-block.btn-buy {
 	width: auto;
+	padding-left: 0;
+	padding-right: 0;
+	display: block;
 }
 .related-date {
 	width: 150px;
@@ -891,4 +902,7 @@ input.btn {
 }
 .qv-layer .card-complex-item:last-child {
 	margin-right: 0;
+}
+.sub-cont input.btn-block {
+  width: 100%;
 }
