--- a/templates/card_cloth.html
+++ b/templates/card_cloth.html
@@ -85,3 +85,10 @@
 //= includes/_card_layers.html
 
 //= includes/_log_reg_layers.html
+
+<div class="layer" id="layer-size">
+	<div class="layer-inner w600">
+		<h3>Таблица размеров</h3>
+		текст...
+	</div>
+</div>
