--- a/templates/includes/_moscow.html
+++ b/templates/includes/_moscow.html
@@ -15,5 +15,5 @@
         </div>
         <p class="semibold">Схема проезда:</p>
     </div>
-    <div id="map_moscow"</div>
+    <div id="map_moscow" class="map"></div>
 </div>
