changes for phone mask and change text in "office"

--- a/static/scss/_card.scss
+++ b/static/scss/_card.scss
@@ -906,3 +906,9 @@ input.btn {
 .sub-cont input.btn-block {
   width: 100%;
 }
+input.def-input.mb7 {
+  margin-bottom: 7px;
+}
+.t30 {
+  top:30px;
+}
