--- a/templates/includes/_accaunt.html
+++ b/templates/includes/_accaunt.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form_group tip-wrap tip-init">
             <label for="phone1" class="form_label">Мобильный телефон:</label>
-            <input type="text" id="phone1" class="form_text" />
+            <input type="text" id="phone1" class="form_text phone-mask" placeholder="+7" />
             <div class="tip tip_inside">Телефон нужен: для подтверждения заказа оператором, для восстановления пароля и для информации о статусе заказа по SMS. Используйте телефон для входа как логин.</div>
         </div>
         <div class="form_group tip-wrap tip-init">
@@ -26,11 +26,11 @@
         <div class="hidden" data-show="changePassword">
             <div class="form_group">
                 <label for="oldPas" class="form_label">Старый пароль:</label>
-                <input type="text" id="oldPas" class="form_text" />
+                <input type="password" id="oldPas" class="form_text" />
             </div>
             <div class="form_group">
                 <label for="newPas" class="form_label">Новый пароль:</label>
-                <input type="text" id="newPas" class="form_text" />
+                <input type="password" id="newPas" class="form_text" />
             </div>
         </div>
         <div class="form_group mb0">
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="form_group">
-            <label for="type" class="form_label">Вид вашего питомца:</label>
+            <label for="type" class="form_label">Кличка:</label>
             <input type="text" id="type" class="form_text" placeholder="По желанию" />
         </div>
         <div class="form_group">
