--- a/templates/ordering.html
+++ b/templates/ordering.html
@@ -11,16 +11,16 @@
                     <label for="phone" class="form_label">
                         Мобильный телефон:
                         <span class="form_icon question tip-wrap tip-init">
-                            <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
+                            <div class="tip tip_atop tip_atop_r">Телефон нужен, чтобы менеджер связался с вами и подтвердил заказ</div>
                         </span>
                     </label>
-                    <input type="text" id="phone" class="form_text" />
+                    <input type="text" id="phone" class="form_text phone-mask" placeholder="+7"  />
                 </div>
                 <div class="form_group">
                     <label for="email" class="form_label">
                         E-mail:
                         <span class="form_icon question tip-wrap tip-init">
-                            <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
+                            <div class="tip tip_atop tip_atop_r">E-mail нужен, чтобы отправить вам детали заказа</div>
                         </span>
                     </label>
                     <input type="text" id="email" class="form_text" />
@@ -29,7 +29,7 @@
                     <label for="name" class="form_label">
                         Имя:
                         <span class="form_icon question tip-wrap tip-init">
-                            <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
+                            <div class="tip tip_atop tip_atop_r">Имя нужно, чтобы заполнить бланк заказа</div>
                         </span>
                     </label>
                     <input type="text" id="name" class="form_text" />
@@ -137,8 +137,8 @@
                     <label for="payment-cash2" class="form_radio">
                         <input type="radio" name="payment" id="payment-cash2"/>
                         <i></i>
-                        <p class="semibold">При получении товара</p>
-                        <p>наличными курьеру</p>
+                        <p class="semibold">Безналичный расчет</p>
+                        <p>для юридических лиц</p>
                     </label>
                 </div>
             </div>
