--- a/templates/ordering_login.html
+++ b/templates/ordering_login.html
@@ -17,7 +17,7 @@
                             <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
                         </span>
                     </label>
-                    <input type="text" id="phone" class="form_text" value="+7(965)111-11-11" />
+                    <input type="text" id="phone" class="form_text phone-mask" value="+7(965)111-11-11" />
                 </div>
                 <div class="form_group mb0">
                     <label for="email" class="form_label">
@@ -153,8 +153,8 @@
                     <label for="payment-cash2" class="form_radio">
                         <input type="radio" name="payment" id="payment-cash2"/>
                         <i></i>
-                        <p class="semibold">При получении товара</p>
-                        <p>наличными курьеру</p>
+                        <p class="semibold">Безналичный расчет</p>
+                        <p>для юридических лиц</p>
                     </label>
                 </div>
             </div>
