--- a/templates/ordering_success.html
+++ b/templates/ordering_success.html
@@ -37,17 +37,15 @@
                             <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
                         </span>
                 </label>
-                <input type="text" id="phone" class="form_text" />
+                <input type="text" id="phone" class="form_text phone-mask" placeholder="+7"  />
             </div>
             <div class="form_group_full">
                 <div class="form_inline form_group">
                     <label for="password" class="form_label">Придумайте пароль:</label>
-                    <input type="text" id="password" class="form_text" />
+                    <input type="password" id="password" class="form_text" />
                 </div>
-                <label for="soon" class="form_checkbox">
-                    <input type="checkbox" id="soon" checked/>
-                    <i></i>
-                    <span class="def-color">Показать пароль, чтобы проверить  правильность ввода</span>
+                <label for="show_pass" class="form_checkbox t30">
+                    <input type="checkbox" id="show_pass"/><i></i>Показать пароль, чтобы проверить правильность ввода
                 </label>
             </div>
             <div class="form_group">
