--- a/templates/includes/_mail.html
+++ b/templates/includes/_mail.html
@@ -3,12 +3,12 @@
     <p class="sh_lead mb25">Здесь вы можете настроить рассылку писем на e-mail на интересующие вас темы. <br/>Если у вас появятся вопросы по работе с рассылкой, посмотрите раздел <a href="#" class="blue">Вопросы по рассылке</a>.</p>
     <form action="#" method="post">
         <div class="form_group">
-            <label for="email2" class="form_label">Введите название списка:</label>
+            <label for="email2" class="form_label">E-mail для рассылки:</label>
             <input type="text" id="email2" class="form_text" />
         </div>
         <div class="form_group">
             <label for="phone2" class="form_label">Мобильный телефон:</label>
-            <input type="text" id="phone2" class="form_text" /></div>
+            <input type="text" id="phone2" class="form_text phone-mask" placeholder="+7"  /></div>
         <div class="form_group mb0">
             <input type="submit" class="btn btn_block" value="Сохранить" />
         </div>
@@ -24,7 +24,9 @@
             <div class="form_inline form_group_thin">
                 <select class="select2">
                     <option selected>Всех</option>
-                    <option>Не всех</option>
+                    <option>Собак</option>
+                    <option>Кошек</option>
+                    <option>Грызунов</option>
                 </select>
             </div>
             <div class="form_inline form_group_xx-medium">
@@ -35,7 +37,6 @@
                     <option>Никогда</option>
                 </select>
             </div>
-            <a href="#" class="blue">Посмотреть пример</a>
         </div>
         <div class="form_group form_group_full">
             <div class="form_inline form_group_wide">
@@ -44,7 +45,9 @@
             <div class="form_inline form_group_thin">
                 <select class="select2">
                     <option selected>Всех</option>
-                    <option>Не всех</option>
+                    <option>Собак</option>
+                    <option>Кошек</option>
+                    <option>Грызунов</option>
                 </select>
             </div>
             <div class="form_inline form_group_xx-medium">
@@ -55,7 +58,6 @@
                     <option>Никогда</option>
                 </select>
             </div>
-            <a href="#" class="blue">Посмотреть пример</a>
         </div>
         <div class="form_group form_group_full">
             <label for="info-order1" class="form_checkbox"><input type="checkbox" id="info-order1"/><i></i>Информация о статусе заказа</label>
@@ -65,6 +67,60 @@
         </div>
     </form>
 </div>
+<div class="sh p20">
+    <h2 class="v1">Уведомление по SMS:</h2>
+    <form action="#" method="post" class="form">
+        <div class="form_group form_group_full">
+            <div class="form_inline form_group_wide">
+                <label for="new-products1" class="form_checkbox"><input type="checkbox" id="new-products1"/><i></i>Поступления новых товаров для</label>
+            </div>
+            <div class="form_inline form_group_thin">
+                <select class="select2">
+                    <option selected>Всех</option>
+                    <option>Собак</option>
+                    <option>Кошек</option>
+                    <option>Грызунов</option>
+                </select>
+            </div>
+            <div class="form_inline form_group_xx-medium">
+                <select class="select2">
+                    <option>Каждый день</option>
+                    <option selected>1 раз в неделю</option>
+                    <option>1 раз в месяц</option>
+                    <option>Никогда</option>
+                </select>
+            </div>
+        </div>
+        <div class="form_group form_group_full">
+            <div class="form_inline form_group_wide">
+                <label for="sale1" class="form_checkbox"><input type="checkbox" id="sale1"/><i></i>Акции и распродажи на товары для</label>
+            </div>
+            <div class="form_inline form_group_thin">
+                <select class="select2">
+                    <option selected>Всех</option>
+                    <option>Собак</option>
+                    <option>Кошек</option>
+                    <option>Грызунов</option>
+                </select>
+            </div>
+            <div class="form_inline form_group_xx-medium">
+                <select class="select2">
+                    <option selected>Каждый день</option>
+                    <option>1 раз в неделю</option>
+                    <option>1 раз в месяц</option>
+                    <option>Никогда</option>
+                </select>
+            </div>
+        </div>
+        <div class="form_group form_group_full">
+            <label for="info-order1" class="form_checkbox"><input type="checkbox" id="info-order1"/><i></i>Информация о статусе заказа</label>
+        </div>
+        <div class="form_group mb0">
+            <input type="submit" class="btn btn_block" value="Сохранить" />
+        </div>
+    </form>
+</div>
+
 <div class="sh p20 p40">
     <h2 class="mb10">Уведомления на сайте:</h2>
     <form action="#" method="post">
