--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -8,7 +8,7 @@
                     <li>
                         <div class="filter-simple_title current">Доставка</div>
                         <ul class="s-tabs-related" data-tabs="delivery">
-                            <li class="filter-simple_option">Москва</li>
+                            <li class="filter-simple_option selected">Москва</li>
                             <li class="filter-simple_option">Московская область</li>
                             <li class="filter-simple_option">Россия</li>
                         </ul>
@@ -50,7 +50,7 @@
                     //= includes/_moscow.html
                 </div>
                 <div class="tab-box">
-                    2
+                    //= includes/_regions.html
                 </div>
                 <div class="tab-box">
                     3
