--- a/static/scss/_delivery.scss
+++ b/static/scss/_delivery.scss
@@ -2,6 +2,58 @@
   line-height: 21px;
   color: $color-text-grey;
 }
+.regions {
+  th {
+    box-sizing: border-box;
+    vertical-align: middle;
+    padding: 20px 10px 20px 20px;
+    text-align: left;
+
+    &:first-child {
+      padding-left: 10px;
+    }
+  }
+  td {
+    padding: 18px;
+    border: 1px solid #edebeb;
+    line-height: 16px;
+
+    &:first-child {
+      padding-left: 10px;
+      border-left: 0;
+    }
+    &:last-child {
+      border-right: 0;
+    }
+    &.zone1 {
+      background-color: #ffe5b2;
+    }
+    &.zone2 {
+      background-color: #e5cce5;
+    }
+    &.zone3 {
+      background-color: #cce5ff;
+    }
+  }
+}
+.regions_header {
+  @include gradient-vertical($color-gradient-grey-light, $color-gradient-grey);
+}
+.regions_zone {
+  width: 60px;
+}
+.regions_cost {
+  width: 110px;
+}
+.regions_free {
+  width: 180px;
+}
+.regions_time {
+  width: 90px;
+}
+.regions_city {
+  width: 260px;
+}
 .map {
   @include size(700px, 340px);
 }
