Доставка по России

--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -53,7 +53,7 @@
                     //= includes/_regions.html
                 </div>
                 <div class="tab-box">
-                    3
+                    //= includes/_russia.html
                 </div>
             </div>
         </div>
