--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -116,9 +116,11 @@ h4.fs13, .fs13 {
 .def-color p {
   margin-bottom: 20px;
 }
-
 .sm-grey {
   color: $color-text-grey;
+}
+.black {
+  color: $color-black;
 }
 
 .img-block {
