--- a/templates/includes/_russia.html
+++ b/templates/includes/_russia.html
@@ -1,6 +1,6 @@
 <div class="tab-box_top p20">
     <h2 class="mb25">Почта России</h2>
-    <div class="delivery_text mb30">
+    <div class="tab-box_text mb30">
         <p>Во все города России, кроме Москвы и Московской области, мы осуществляем доставку только почтой России.</p>
     </div>
     <form action="#" method="post" class="form">
