Страница операций с товаром

--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -123,6 +123,9 @@ input.btn {
 .form_group_wide {
   min-width: 240px;
 }
+.form_group_x-wide {
+  width: 230px;
+}
 .form_group_medium {
   width: 170px;
 }
