--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -90,7 +90,7 @@
                 --><span class="chart_button"><a href="#" class="btn btn_grey" data-change="promo">Пересчитать</a></span>
         </div>
         <div class="ptb20">
-            <div class="form_group form_inline mb0">
+            <div class="form_group form_inline mr20 mb0">
                 <a href="#" class="btn btn_block">Применить</a>
             </div>
             <a href="#" class="chart_add">Добавить товары из корзины</a>
