--- a/templates/ordering.html
+++ b/templates/ordering.html
@@ -173,7 +173,7 @@
                 <p><span class="sm-grey">Стоимость доставки:</span> <span class="semibold">0 руб</span></p>
             </div>
             <div class="helveticabold fs21 mb36">Итого 1 560 руб</div>
-            <div class="form_inline form_group_medium">
+            <div class="form_inline form_group_medium mr20">
                 <a href="#" class="btn btn_block">Подтвердить заказ</a>
             </div>
             <a href="#" class="ordering_edit">Изменить заказ</a>
