--- a/templates/payment.html
+++ b/templates/payment.html
@@ -14,8 +14,7 @@
                             <li class="filter-simple_option">Безналичный расчет</li>
                         </ul>
                     </li>
-                    <li><a href="#" class="filter-simple_title">Возврат товара</a></li>
-                    <li><a href="#" class="filter-simple_title">Обмен товара</a></li>
+                    <li><a href="#" class="filter-simple_title">Операции с товаром</a></li>
                     <li><a href="#" class="filter-simple_title">Безопасность</a></li>
                     <li><a href="#" class="filter-simple_title">Вопросы и ответы</a></li>
                     <li><a href="#" class="filter-simple_title">Письмо директору</a></li>
