--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -14,8 +14,7 @@
                         </ul>
                     </li>
                     <li><a href="#" class="filter-simple_title">Оплата</a></li>
-                    <li><a href="#" class="filter-simple_title">Возврат товара</a></li>
-                    <li><a href="#" class="filter-simple_title">Обмен товара</a></li>
+                    <li><a href="#" class="filter-simple_title">Операции с товаром</a></li>
                     <li><a href="#" class="filter-simple_title">Безопасность</a></li>
                     <li><a href="#" class="filter-simple_title">Вопросы и ответы</a></li>
                     <li><a href="#" class="filter-simple_title">Письмо директору</a></li>
