--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -26,7 +26,7 @@
         <div class="content fright">
             <h1 class="mb10">Доставка</h1>
             <div class="float-cont">
-                <ul class="tabs tabs_col3 s-tabs" data-tabs="delivery">
+                <ul class="tabs tabs_cols tabs_col3 s-tabs" data-tabs="delivery">
                     <li class="selected">
                         <img src="static/images/ico/tab-delivery1.png" class="tabs_img" alt="" />
                         <p>Москва</p>
