--- a/templates/office.html
+++ b/templates/office.html
@@ -3,7 +3,7 @@
 <div class="width">
 	<h1 class="v1">Личный кабинет</h1>
 	<div class="float-cont">
-		<ul class="tabs tabs_col5 s-tabs" data-tabs="office">
+		<ul class="tabs tabs_cols tabs_col5 s-tabs" data-tabs="office">
 			<li class="selected">
 				<img src="static/images/ico/tab-office1.png" class="tabs_img" alt="" />
 				<p>Мой аккаунт</p>
