--- a/templates/product-operations.html
+++ b/templates/product-operations.html
@@ -26,7 +26,7 @@
         <div class="content fright">
             <h1 class="mb10">Оплата</h1>
             <div class="float-cont">
-                <ul class="tabs tabs_col2 s-tabs" data-tabs="operations">
+                <ul class="tabs tabs_cols tabs_col2 s-tabs" data-tabs="operations">
                     <li class="selected">
                         <img src="static/images/ico/tab-operations1.png" class="tabs_img" alt="" />
                         <p>Возврат товара</p>
