--- a/templates/payment.html
+++ b/templates/payment.html
@@ -26,7 +26,7 @@
         <div class="content fright">
             <h1 class="mb10">Оплата</h1>
             <div class="float-cont">
-                <ul class="tabs tabs_col3 s-tabs" data-tabs="payment">
+                <ul class="tabs tabs_cols tabs_col3 s-tabs" data-tabs="payment">
                     <li>
                         <img src="static/images/ico/tab-payment1.png" class="tabs_img" alt="" />
                         <p>Оплата наличными</p>
