--- a/templates/includes/_mail.html
+++ b/templates/includes/_mail.html
@@ -18,7 +18,7 @@
     <h2 class="v1">Рассылки и уведомления на e-mail:</h2>
     <form action="#" method="post" class="form">
         <div class="form_group form_group_full">
-            <div class="form_inline form_group_wide">
+            <div class="form_inline form_group_x-wide">
                 <label for="new-products" class="form_checkbox"><input type="checkbox" id="new-products"/><i></i>Поступления новых товаров для</label>
             </div>
             <div class="form_inline form_group_thin">
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="form_group form_group_full">
-            <div class="form_inline form_group_wide">
+            <div class="form_inline form_group_x-wide">
                 <label for="sale" class="form_checkbox"><input type="checkbox" id="sale"/><i></i>Акции и распродажи на товары для</label>
             </div>
             <div class="form_inline form_group_thin">
@@ -71,7 +71,7 @@
     <h2 class="v1">Уведомление по SMS:</h2>
     <form action="#" method="post" class="form">
         <div class="form_group form_group_full">
-            <div class="form_inline form_group_wide">
+            <div class="form_inline form_group_x-wide">
                 <label for="new-products1" class="form_checkbox"><input type="checkbox" id="new-products1"/><i></i>Поступления новых товаров для</label>
             </div>
             <div class="form_inline form_group_thin">
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="form_group form_group_full">
-            <div class="form_inline form_group_wide">
+            <div class="form_inline form_group_x-wide">
                 <label for="sale1" class="form_checkbox"><input type="checkbox" id="sale1"/><i></i>Акции и распродажи на товары для</label>
             </div>
             <div class="form_inline form_group_thin">
