--- a/templates/includes/_orders.html
+++ b/templates/includes/_orders.html
@@ -30,7 +30,7 @@
                 <div class="orders_state blue">Не оплачен / не подтвержден</div>
             </td>
             <td>
-                <a href="#" class="orders_action_link edit s-toggle" data-toggle="edit-order">Изменить</a>
+                <a href="#" class="action_link edit s-toggle" data-toggle="edit-order">Изменить</a>
             </td>
         </tr>
         <tr>
@@ -52,7 +52,7 @@
                 <div class="orders_state orange">Не оплачен / ожидайте доставку</div>
             </td>
             <td>
-                <a href="#" class="orders_action_link edit s-toggle" data-toggle="edit-order">Изменить</a>
+                <a href="#" class="action_link edit s-toggle" data-toggle="edit-order">Изменить</a>
             </td>
         </tr>
         <tr>
@@ -73,7 +73,7 @@
                 <div class="orders_state green">Доставлен</div>
             </td>
             <td>
-                <a href="#" class="orders_action_link repeat">Повторить</a>
+                <a href="#" class="action_link repeat">Повторить</a>
             </td>
         </tr>
     </table>
