--- a/templates/product-operations.html
+++ b/templates/product-operations.html
@@ -43,10 +43,10 @@
                 <div class="tab-box selected">
                     <div class="tab-box_top p20">
                         <div class="mb25">
-                        <div class="form_inline form_group_x-wide mr20">
+                        <div class="form_inline form_group_xx-wide mr20">
                             <a href="#" class="btn btn_block">Скачать заявление на возврат</a>
                         </div>
-                        <a href="#" class="orders_action_link revert no-underline semibold">Прикрепить заявление на возврат</a>
+                        <a href="#" class="action_link revert no-underline semibold">Прикрепить заявление на возврат</a>
                         </div>
                         <h2 class="mb25">Правила возврата</h2>
                         <div class="tab-box_text">
