--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -121,9 +121,12 @@ input.btn {
   width: 100%;
 }
 .form_group_wide {
-  min-width: 240px;
+  min-width: 380px;
 }
 .form_group_x-wide {
+  min-width: 240px;
+}
+.form_group_xx-wide {
   width: 230px;
 }
 .form_group_medium {
@@ -166,7 +169,7 @@ input.btn {
   }
 }
 .form_textarea {
-  @include size(380px, 120px);
+  height: 120px;
 }
 .form_file {
   position: relative;
