--- a/templates/help.html
+++ b/templates/help.html
@@ -96,7 +96,7 @@
                                 <label for="contact" class="form_label">E-mail или телефон (для ответа):</label>
                                 <input type="text" id="contact" class="form_text" />
                             </div>
-                            <div class="form_group form_group_full">
+                            <div class="form_group form_group_wide">
                                 <label for="question" class="form_label">Сообщение:</label>
                                 <textarea id="question" class="form_textarea"></textarea>
                             </div>
