--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -119,6 +119,10 @@ h4.fs13, .fs13 {
   font-size: 13px;
 }
 
+.text_grey {
+  line-height: 21px;
+  color: $color-text-grey;
+}
 .fs11-grey {
   font-size: 11px;
   color: $color-text-grey;
