--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -283,18 +283,18 @@
 				<div class="link-small"><a href="" class="underline">Все записи</a></div>
 
 				<div class="float-cont">
-					<div class="blog-short-item w300">
-						<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-						<div class="blog-short-date">15 декабря 2015</div>
-						<div class="blog-short-title"><a href="">Выбираем корм для щенка</a></div>
-						<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
+					<div class="blog_item_short w300">
+						<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+						<div class="blog_date">15 декабря 2015</div>
+						<div class="blog_title_short"><a href="">Выбираем корм для щенка</a></div>
+						<div class="blog_text">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 					</div>
 
-					<div class="blog-short-item w300">
-						<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-						<div class="blog-short-date">15 декабря 2015</div>
-						<div class="blog-short-title"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
-						<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
+					<div class="blog_item_short w300">
+						<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+						<div class="blog_date">15 декабря 2015</div>
+						<div class="blog_title_short"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
+						<div class="blog_text">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 					</div>
 
 				</div>
