--- a/templates/help.html
+++ b/templates/help.html
@@ -60,7 +60,7 @@
                             <div class="filter-help-title">1 Как заказать товар?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help-content">
                                 <p class="semibold mb25">Ответ:</p>
-                                <div class="tab-box_text">
+                                <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                             <div class="filter-help-title">2 Как оформить заказ?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help-content">
                                 <p class="semibold mb25">Ответ:</p>
-                                <div class="tab-box_text">
+                                <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
                                 </div>
                             </div>
@@ -78,7 +78,7 @@
                             <div class="filter-help-title">3 Как убедить енота чтобы он перестал стирать все подряд?<span class="filter-title-arrow"></span></div>
                             <div class="filter-content filter-help-content">
                                 <p class="semibold mb25">Ответ:</p>
-                                <div class="tab-box_text">
+                                <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
                                 </div>
                             </div>
