--- a/templates/includes/_moscow.html
+++ b/templates/includes/_moscow.html
@@ -1,6 +1,6 @@
 <div class="tab-box_top p20">
     <h2 class="mb25">Курьерская служба</h2>
-    <div class="tab-box_text">
+    <div class="text_grey">
         <p>Условия доставки по Москве здесь.</p>
         <p>Условия по Московской области — ниже на этой странице. По Московской области мы доставляем только курьерской службой.</p>
     </div>
@@ -8,7 +8,7 @@
 <div class="sh">
     <div class="p20">
         <h2 class="mb25">Самовывоз со склада:</h2>
-        <div class="tab-box_text mb25">
+        <div class="text_grey mb25">
             <p>Склад расположен по адресу: г. Москва, метро Курская, ...</p>
             <p>Время работы: ежедневно с 9:00 до 21:00.</p>
             <p>Телефон: +7(495)111-11-11.</p>
