--- a/templates/includes/_regions.html
+++ b/templates/includes/_regions.html
@@ -1,6 +1,6 @@
 <div class="tab-box_top p20">
     <h2 class="mb25">Курьерская служба</h2>
-    <div class="tab-box_text">
+    <div class="text_grey">
         <p>Условия доставки по Москве здесь.</p>
         <p>Условия по Московской области — ниже на этой странице. По Московской области мы доставляем только курьерской службой.</p>
     </div>
