--- a/templates/letter.html
+++ b/templates/letter.html
@@ -19,7 +19,7 @@
         <div class="content fright">
             <h1 class="mb10">Письмо директору</h1>
             <div class="sh p20 mb40">
-                <div class="tab-box_text mb25">
+                <div class="text_grey mb25">
                     <p>Уважаемый клиент, вы можете направить ваше пожелание или жалобу <br/>напрямую директору TeenyWeeny.ru.</p>
                     <p class="mb20">Для нас очень важно услышать ваше мнение о нашей работе.</p>
                     <p>Спасибо!</p>
