--- a/templates/payment.html
+++ b/templates/payment.html
@@ -53,7 +53,7 @@
                 <div class="tab-box selected">
                     <div class="tab-box_top p20">
                         <h2 class="mb25">Онлайн-оплата картой</h2>
-                        <div class="tab-box_text">
+                        <div class="text_grey">
                             <p class="mb20"><span class="semibold black">1.</span> На этапе оформления заказа заполните все необходимые поля и выберите способ оплаты «Пластиковая карта». Нажмите кнопку «Оформить заказ».</p>
                             <p><span class="semibold black">2.</span> Вы будете переведены на безопасную страницу оплаты, где Вас попросят ввести платёжные данные, такие как</p>
                             <div class="mb20">
