--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -104,12 +104,12 @@
 					</div>
 					<div class="float-cont sort">
 						<div class="fleft">
-							<div class="sort-title">Сортировать по:</div>
-							<a href="" class="sort-btn active sort-down">цене</a>
-							<a href="" class="sort-btn">популярности</a>
-							<a href="" class="sort-btn">новизне</a>
+							<div class="sort_title">Сортировать по:</div>
+							<a href="" class="sort_btn active sort-down">цене</a>
+							<a href="" class="sort_btn">популярности</a>
+							<a href="" class="sort_btn">новизне</a>
 						</div>
-						<div class="fright"><div class="sort-count">32 товара</div></div>
+						<div class="fright"><div class="sort_count">32 товара</div></div>
 					</div>
 
 					<div class="p20 float-cont">
