--- a/templates/index.html
+++ b/templates/index.html
@@ -432,32 +432,32 @@
 			<h3>Из нашего блога</h3>
 			<div class="link-small"><a href="" class="underline">Все записи</a></div>
 			<div class="float-cont">
-				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-					<div class="blog-short-date">15 декабря 2015</div>
-					<div class="blog-short-title"><a href="">Выбираем корм для щенка</a></div>
-					<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
+				<div class="blog_item_short">
+					<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+					<div class="blog_date">15 декабря 2015</div>
+					<div class="blog_title_short"><a href="">Выбираем корм для щенка</a></div>
+					<div class="blog_text">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 				</div>
 
-				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-					<div class="blog-short-date">15 декабря 2015</div>
-					<div class="blog-short-title"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
-					<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
+				<div class="blog_item_short">
+					<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+					<div class="blog_date">15 декабря 2015</div>
+					<div class="blog_title_short"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
+					<div class="blog_text">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 				</div>
 
-				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-					<div class="blog-short-date">15 декабря 2015</div>
-					<div class="blog-short-title"><a href="">Сбалансированное питание для маленьких собак</a></div>
-					<div class="blog-short-txt">Маленькие собаки нуждаются в особом питании. Мы хотим поделиться нашим опытом с вами!</div>
+				<div class="blog_item_short">
+					<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+					<div class="blog_date">15 декабря 2015</div>
+					<div class="blog_title_short"><a href="">Сбалансированное питание для маленьких собак</a></div>
+					<div class="blog_text">Маленькие собаки нуждаются в особом питании. Мы хотим поделиться нашим опытом с вами!</div>
 				</div>
 
-				<div class="blog-short-item mr0">
-					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
-					<div class="blog-short-date">15 декабря 2015</div>
-					<div class="blog-short-title"><a href="">Совместная жизнь щенка и котенка</a></div>
-					<div class="blog-short-txt">Этот текст стоит ограничить в админке, либо не ограничивать совсем. Пусть здесь будет текста столько, сколько считает нужным контент-менеджер.</div>
+				<div class="blog_item_short mr0">
+					<a href="" class="blog_img blog_img_short"><img src="static/images/upload/b1.jpg" alt=""/></a>
+					<div class="blog_date">15 декабря 2015</div>
+					<div class="blog_title_short"><a href="">Совместная жизнь щенка и котенка</a></div>
+					<div class="blog_text">Этот текст стоит ограничить в админке, либо не ограничивать совсем. Пусть здесь будет текста столько, сколько считает нужным контент-менеджер.</div>
 				</div>
 			</div>
 		</div>
